attempted to fix issues with navbar on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,11 @@ body {
     text-shadow: 1px 1px 2px slategray;
 }
 
+.navbar-nav { 
+    position: absolute; 
+    right: 0%;  
+} 
+
 .nav-item {
     font-size: 20px;
     padding: 20px;
@@ -66,10 +71,6 @@ p {
         width: 80%;
     }
 
-    .wrap {
-        float: right;
-    }
-
   }
   
 /* Width at 768px and below */
@@ -78,19 +79,28 @@ p {
         width: 80%;
     }
 
-    .wrap {
-        float: right;
-    }
+    .navbar-nav { 
+        position: relative; 
+        right: 0%;  
+    } 
     
   }
   
-/* Width at 168px and below */
+/* Width at 640px and below */
 @media screen and (max-width: 640px) {
     .container {
         width: 80%;
     }
 
-    .wrap {
-        float: right;
+    .navbar-brand { 
+        width: 100%;
+        text-align: center;
     }
+
+    .nav-item {
+        width: 100%;
+        font-size: 20px;
+        padding: 10px;
+    }
+
 }
